--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <title>My First Web Page</title>
+  <!-- Embed Style Method -->
+<style>
+  header {
+    background: url(central_park.jpg) 0 -200px no-repeat;  /* place image as background and shift up */
+    background-size: 1500px; /* scale image to fit header better */
+    /* background-position: 0 -200px; */ /* alternative way to shift image */
+    height: 400px; /* give header some height to display the background image */
+  }
+</style>
 </head>
 <body>
 
@@ -26,7 +35,7 @@
      <main>
       <h1>My First Heading</h1>
       <p>My first paragraph.</p>
-      <img src="central_park.jpg" alt="Central Park" width="500">
+     
     </main> 
     <!-- Footer Information -->
     <footer>&copy; Copyright 2020</footer>
