--- a/index.html
+++ b/index.html
@@ -7,8 +7,44 @@
   header {
     background: url(central_park.jpg) 0 -200px no-repeat;  /* place image as background and shift up */
     background-size: 1500px; /* scale image to fit header better */
-    /* background-position: 0 -200px; */ /* alternative way to shift image */
+    /*background-position: 0 -200px;*/
+    /*background-repeat: no-repeat;*/
     height: 400px; /* give header some height to display the background image */
+    padding-top: 100px;
+    padding-left: 100px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 60px;
+    color: #fff;
+  }
+
+   li {
+    list-style-type: none;
+    display: inline;
+    padding: 0 20px;
+  }
+
+  li a {
+    text-decoration: none; /* Remove underline */
+  }
+  li a:link {
+    color: #000; /* Before click */
+  }
+  li a:visited {
+    color: #818db3; /* After click */
+  }
+  li a:hover {
+    color: #333; /* Mouse over */
+  }
+  li a:active {
+    color: #753a30; /* Mouse down */
+  }
+
+  nav {
+    background-color: rgb(255, 245, 238);
+    height: 50px;
+    text-align: center;
+    padding-top: 2px;
   }
 </style>
 </head>
@@ -18,7 +54,7 @@
   <div id="container">
 
     <!-- Brand of website -->
-    <header>My Web Site Brand</header>
+    <header style="font-size: 60px; color: #fff;">My Web Site Brand</header>
 
     <!-- Main Navigation -->
         
