--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <!-- Embed Style Method -->
 <style>
   header {
-    background: url(central_park.jpg) 0 -200px no-repeat;  /* place image as background and shift up */
-    background-size: 1500px; /* scale image to fit header better */
-    /*background-position: 0 -200px;*/
-    /*background-repeat: no-repeat;*/
-    height: 400px; /* give header some height to display the background image */
+    background: url(central_park.jpg) 0 -200px no-repeat;
+    background-size: 1500px;
+    height: 400px;
     padding-top: 100px;
     padding-left: 100px;
     font-weight: bold;
@@ -18,26 +16,26 @@
     color: #fff;
   }
 
-   li {
+  li {
     list-style-type: none;
     display: inline;
     padding: 0 20px;
   }
 
   li a {
-    text-decoration: none; /* Remove underline */
+    text-decoration: none;
   }
   li a:link {
-    color: #000; /* Before click */
+    color: #000;
   }
   li a:visited {
-    color: #818db3; /* After click */
+    color: #818db3;
   }
   li a:hover {
-    color: #333; /* Mouse over */
+    color: #333;
   }
   li a:active {
-    color: #753a30; /* Mouse down */
+    color: #753a30;
   }
 
   nav {
@@ -45,6 +43,23 @@
     height: 50px;
     text-align: center;
     padding-top: 2px;
+  }
+
+  main {
+    height: 400px; /* give some height to get a better sense of how the page could look */
+  }
+
+  main h1 {
+    color: rgb(129, 141, 179);
+    font-family: arial;
+  }
+
+  footer {
+    height: 40px;
+    background-color: rgb(129, 141, 179);
+    text-align: center;
+    padding-top: 20px;
+    color: rgb(211, 218, 240);
   }
 </style>
 </head>
