--- a/html-demo2c.html
+++ b/html-demo2c.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="page2.html">About</a></li>
-        <li>Gallery</li>
+         <li><a href="page4.html">Gallery</a></li>
         <li><a href="html-demo2c.html">Contact</a></li>
       </ul>
     </nav> <!-- End Main Navigation -->
