added javascript to 4th page

--- a/page4.html
+++ b/page4.html
@@ -28,12 +28,14 @@
       <h1>My Fourth Heading</h1>
       <p>My Fourth paragraph.</p>
       <ul id="album">
+        <!--
         <li id="photo"><img src="images/winterland1.jpg"></li>
         <li id="photo"><img src="images/winterland2.jpg"></li>
         <li id="photo"><img src="images/winterland3.jpg"></li>
         <li id="photo"><img src="images/winterland4.jpg"></li>
         <li id="photo"><img src="images/winterland5.jpg"></li>
         <li id="photo"><img src="images/winterland6.jpg"></li>
+        -->
       </ul>
     </main> <!-- End Main Content -->
     <!-- Footer Information -->
@@ -41,5 +43,25 @@
 
   </div> <!-- End Container -->
 
+
+<script>
+  var photos = []; //Declare an empty array to store image element
+  var fileNames = []; //Declare an empty element to store image file names
+  var imageList = []; //Declare an empty array to store html list that contain an image
+  var image; //Declare an empty variable to store the assembled image list codes
+  var openList = "<li id='photo'>"; //Declare a variable to contain open list tag
+  var closeList = "</li>"; //Declare a variable to contain close list tag
+
+  //Create a loop to create 6 images starting with index of 0
+  for (var i = 0; i < 6; i++) {
+    fileNames.push("winterland" + (i + 1)); //Create image file name and store in the array
+    photos.push("<img src='images/" + fileNames[i] + ".jpg'>"); //Assemble file name into image element and store in array
+    image = openList + photos[i] + closeList; //Assemble image element from array with list elements and store in a variable
+    imageList.push(image); //Store (push) the assembled list codes into an array
+  }
+
+  //Display all six image codes stored in the array
+  document.getElementById("album").innerHTML = imageList.join("");
+</script>
 </body>
 </html>
