--- a/html-demo2c.html
+++ b/html-demo2c.html
@@ -57,9 +57,18 @@
     <div class="form-group">
       <label for="contact_method">How should we contact you?</label>
       <select name="contact_method" id="contact_method">
-        <option>Email</option>
-        <option>Phone</option>
+        <option id="option-instruct" value="">Select One</option>
+        <option id="option-email" value="email">Email</option>
+        <option id="option-phone" value="phone">Phone</option>
       </select>
+    </div>
+    <div class="form-group" id="email-box" style="display:none;">
+      <label for="email_input">Your Email:</label>
+      <input type="email" id="email_input" name="email_input">
+    </div>
+    <div class="form-group" id="phone-box" style="display:none;">
+      <label for="phone_input">Your Phone:</label>
+      <input type="text" id="phone_input" name="phone_input">
     </div>
     <div class="form-group">
       <label for="comments">Tell us the reason of your visit today:</label>
@@ -75,6 +84,7 @@
     <!-- Footer Information -->
     <footer>&copy; Copyright 2020</footer>
 
+    <script src="contact-method.js"></script>
   </div> <!-- End Container -->
 
 </body>
