--- a/html-demo2c.html
+++ b/html-demo2c.html
@@ -48,11 +48,13 @@
       <input type="text" name="phone" id="phone">
     </div>
     <div class="form-group">
-      <label>Select your gender</label>
-      <input type="radio" name="gender" value="male" id="male">
-      <label for="male" class="radio-label">Male</label>
-      <input type="radio" name="gender" value="female" id="female">
-      <label for="female" class="radio-label">Female</label>
+      <label for="male" style="font-size:1.2em; font-weight:bold; display:block; margin-bottom:4px;">Select your gender</label>
+      <span style="display:inline-block;">
+        <input type="radio" name="gender" value="male" id="male" style="margin-right:4px;">
+        <label for="male" class="radio-label" style="margin-right:16px;">Male</label>
+        <input type="radio" name="gender" value="female" id="female" style="margin-right:4px;">
+        <label for="female" class="radio-label">Female</label>
+      </span>
     </div>
     <div class="form-group">
       <label for="contact_method">How should we contact you?</label>
